<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonsLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:text="@string/buttons" />

            <Button
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/password" />

            <Button
                android:id="@+id/calendarLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/calendar" />

            <Button
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/relativeLayout" />

            <Button
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/constraintLayout" />

            <Button
                android:id="@+id/repasLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/repas" />

            <Button
                android:id="@+id/meteoLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/meteo" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>